Background fix for dark mode code blocks. I used #16161d multiplied by two to get #32323a.

--- a/css/main.css
+++ b/css/main.css
@@ -399,6 +399,10 @@ img {
   border-top: 1px solid #dadada;
   }
 
+  pre, code {
+    background-color: #32323A;
+  }
+
 }
 
 
